stripping out some me-centric text

--- a/pages/templates/resume.html
+++ b/pages/templates/resume.html
@@ -7,152 +7,7 @@
 {% block content %}
 
 <div class="entry_box">
-<p>What I'm looking for is a chance to work as part of a small team, not as the rock star, but as the reliable mid-level developer.  I like to wear a few different hats at once, and to work in different languages if possible (PHP is my primary, but I'm also learning Python and have a background in Perl).</p>
-
-<p>I'm a whiz at database optimization and code refactoring for maximum efficiency.  And I know my way around a server.  Although I'm primarily a PHP developer with a lot of MySQL experience, in the past six months I've been transitioning to Python, and have become an active participant in the Python/Django community.  In addition to the active Django blogging I do, I'm also working on a personal task management application that I expect to debut in December of this year.  I've also worked in Ruby/Rails, Perl, and a few scripting languages.  I actively maintain my markup/CSS skills through a number of personal web projects with AJAX-y features.</p>
-</div>
-
-<div class="entry_box">
-<h3>Barbara Shaurette :: Senior Software Engineer</h3>
-
-bshaurette@gmail.com<br />
-<a href="http://www.linkedin.com/in/barbarashaurette">http://www.linkedin.com/in/barbarashaurette</a><br />
-
-<p>I am an experienced web developer seeking the challenge of a fast-paced, demanding environment.  The bulk of my experience is in building and maintaining dynamic content-based applications - content management, CRM systems, event reporting, business intelligence, and internal configuration tools.</p>
-
-<p>My ideal position includes core application development, along with a broad base of responsibilities beyond just writing code - product planning, testing and debugging, documentation, platform building, and exposure to pertinent systems administration responsibilities.</p>
-
-<p>Although most of what I do involves database work, my extensive experience in online advertising has made me agile and a creative problem-solver.  I'm an innovator - that person who can identify the needs of the business and provide the data that reveals trends and allows for informed planning and smart decision-making.</p>
-
-<h4>Summary of Qualifications</h4>
-8+ years writing web-based applications<br />
-Extensive experience with relational databases, dynamic content, and server side processing<br />
-Skilled in application architecture<br />
-Team lead experience<br />
-
-<h4>Technical Background</h4>
-Presentation/Middleware/Platform:<br />
-Python/Django, PHP 4-5/Zend, Perl 5.x, Ruby/Rails<br />
-JavaScript, jQuery, CSS, XML/XSLT<br />
-HTML/DHTML/XHTML, some XSP/ASP/JSP, XCode/WebObjects<br /><br />
-
-Database:<br />
-MySQL 3/4/5, some Postgres<br /><br />
-
-Web Servers:<br />
-Apache 2.x, ZEND Platform, Tomcat<br /><br />
-
-Operating Systems:<br />
-GNU/Linux, Mac OS X/Server, Windows 95/98/NT/2000<br /><br />
-
-Dev Tools/IDEs:<br />
-vi, ZEND Studio, VMWare, Eclipse, Bugzilla/Trac ticketing systems, Visual Interdev<br /><br />
-
-Source control:<br />
-SVN (cmdline), CVS (cmdline), WinCVS, Visual SourceSafe<br /><br />
-
-Design tools:<br />
-Macromedia Fireworks MX and Flash MX, Adobe Photoshop and Illustrator<br /><br />
-
-Additional Skills:<br />
-debugging/troubleshooting; writing documentation - requirements/specifications, use cases, training materials; writing simple unit tests; regression testing<br /><br />
-
-Personal Strengths:<br />
-Strong work ethic; Fast learner/adapt to new technologies quickly; Good planner/thorough and organized; "Ideas person", consistently initiating new concepts; Friendly and easygoing<br /><br />
-
-Side projects:<br />
-http://www.djangrrl.com/ (Python/Django)<br />
-http://www.gamedayfinder.com/ (PHP/MySql)<br />
-http://www.whodieswhopayswhoprofits.com/ (PHP/MySQL)<br /><br />
-
-<h4>Employment History</h4>
-
-November 2007 - November 2008<br />
-Tippit, Inc. / http://www.tippit.com<br />
-<ul>
-Senior Software Engineer<br />
-<li>develop and maintain ETL processes<br />
-<li>maintain and enhance a variety of internal tools, such as reporting systems, account management/configuration, and CRM<br />
-<li>build automated cost analysis tools that import data from the MSN, Google, and Yahoo keyword reporting APIs<br />
-<li>Python/Django development: landing page generator and a large-scale open research site with community and social networking features<br />
-</ul>
-
-July 2007 - November 2007<br />
-Signatures Network / http://www.signaturesnetwork.com<br />
-<ul>
-Senior Software Engineer<br />
-<li>rewrite of the Signatures ecommerce site, http://www.fanfire.com/, to accommodate new features, shopping cart technology, and custom artist skinning<br />
-<li>maintenance of high-profile artist fan club web sites, such as kissonline.com, velvetrevolver.com, brucespringsteen.net, and zztop.com<br />
-<li>developed internal ad placement system to leverage fan merchandise purchasing and enhance business intelligence<br />
-</ul>
-
-March 2007 - June 2007<br />
-LiveNation / http://www.livenation.com<br />
-<ul>
-Senior Applications Developer<br />
-<li>maintain PHP search site, including front-end XSL and managing MySql schemas<br />
-<li>Zend Framework upgrade (routing and dispatching for PHP application, to pave the way for internationalization)<br />
-<li>translated XML content to pages designed to work with an XSP (C++ based) engine, to achieve significant performance gains<br />
-</ul>
-
-March 2004 - March, 2007<br />
-Adteractive, Inc. / http://www.adteractive.com<br />
-
-<p>Adteractive is an online advertising network that serves both publishers and advertisers, bridging the gap with highly specialized consumer experiences representing a variety of business categories. During my time at Adteractive, I served as both an applications developer and a platform engineer, providing me with an emphasis on thorough end-to-end product familiarity - everything from business needs to application behavior, engine functionality, data transfer, transaction loading, and server configuration.</p>
-
-<ul>
-Senior Web Applications Developer<br />
-<li>maintenance and development of new features for our proprietary PHP framework layer<br />
-<li>assist application development teams in building their own web-based applications against that framework<br />
-<li>coordinate server configuration for launch of new PHP applications<br />
-<li>maintain a service layer that interacts with database and core services to write event records and post transaction data<br />
-<li>coordinate build and release process; coordinating cross-platform development cycles on overlapping schedules<br />
-<li>work closely with product/project managers to define timelines and application features<br />
-<li>current project - writing an API to work with a Java validation service that replaces business rule evaluation currently performed by a Perl engine<br />
-</ul>
-
-<ul>
-Team Lead - Application Development<br />
-<li>leading small teams of developers in our internal business units through build/launch cycles<br />
-<li>training to introduce new technologies<br />
-<li>managed developer groups through maintenance cycles, balancing workloads, assessing skills and delegating work accordingly, as well as setting - goals and reviewing accomplishments<br />
-</ul>
-
-<ul>
-Application Development<br />
-<li>build multi-page microsites and portals that incorporate form submission, form validations, and some complex user flow<br />
-<li>write Perl models that evaluate submitted data against business rules prior to posting to client/loading into a data warehouse<br />
-<li>experience with data transfer via HTTP post, batched transfers by email & FTP, XML output, etc.
-navigating production and development servers, evaluating log statements for debugging<br />
-</ul>
-
-July 2003 - March 2004<br />
-Self-Employed / Contractor<br />
-<ul>
-Web Developer<br />
-<li>Freelance web design and development for local clients, following the sale of the Flipside business unit in July of 2003.<br />
-</ul>
-
-June 1999 - July 2003<br />
-Vivendi/Universal, Inc. / http://www.vivendiuniversal.com/<br />
-<ul>
-Game Producer/Developer<br />
-<li>writing original code/logic for entertainment applications in a variety of platforms (Flash, Shockwave, Java)<br />
-<li>developed complex advertising campaigns incorporating elements of dynamic content, form submission, and user database transactions<br />
-<li>designed, coded and maintained Flipside network of online game web sites<br />
-</ul>
-
-<ul>
-Web Developer<br />
-<li>front-end development of promotional campaigns for Berkeley Systems and WON.net, including extensive markup and design<br />
-<li>maintenance of BerkSys and WON.net online game channels, including simple Java configuration<br />
-<li>massive multi-site redesign and conversion from plain HTML to ASP<br />
-</ul>
-
-<p>Prior to 1998, my experience was primarily in marketing and sales support positions, most involving a significant amount of data analysis and localized database management.</p>
-
-<p>Personal References: Available upon request</p>
-
+    <!-- resume here -->
 </div>
 
 {% endblock %}
